--- a/os_linux.md.html
+++ b/os_linux.md.html
@@ -154,6 +154,11 @@ LC_ALL=C xdg-user-dirs-gtk-update
 ## Font
 - フォントを~/.local/share/fontsにコピーする
 
+## インストール済フォントの確認
+~~~
+fc-list
+~~~
+
 <meta name="keywords" content="*memo_os.mxlinux*">
 MX Linux
 =======================================================
