--- a/git.md.html
+++ b/git.md.html
@@ -43,9 +43,9 @@ git init --bare
 #### clone
 ~~~
 git clone URL [work_dir]
-git clone -b branch_name URL          # specify branch
-git clone --recurse-submodules URL    # recursive
-git clone --depth 1 URL
+git clone -b branch_name URL                  # specify branch
+git clone --recurse-submodules URL            # recursive
+git clone --depth 1 --recurse-submodules --shallow-submodules URL  # shallow clone
 ~~~
 
 #### init
@@ -167,6 +167,7 @@ git remote -v                  # list remote repositories
 ## remote branch
 ~~~
 git fetch
+git fetch --depth=5
 git fetch --prune              # prune remote branches
 git pull origin {branch}       # fetch + merge
 git push origin {branch}
