--- a/setup.md.html
+++ b/setup.md.html
@@ -55,15 +55,17 @@ cd env
 1. Steam
 1. Oculus software
 1. [Cica font](https://github.com/tsunesan3/awsome-jp-coding-fonts)
-1. [wsltty](https://github.com/mintty/wsltty)
+1. [Wsltty](https://github.com/mintty/wsltty)
 1. [AutoHotkey](https://www.autohotkey.com/)
 1. [Tablacus](https://tablacus.github.io/explorer.html)
   - アドオン: 分割
   - アドオン: お気に入りバー (配置: 左, 高さ: 300)
   - アドオン: サイドバー (配置: 左)
+1. [Msys2](https://www.msys2.org/)
 1. [Git](https://git-scm.com/)
-1. [MSYS2](https://www.msys2.org/)
 1. [Cmake](https://cmake.org/)
+1. [Vim](https://www.vim.org/)
+1. [Blender](https://www.blender.org/)
 
 ~~~
 C:\Program Files\Git\cmd
@@ -239,9 +241,10 @@ $MY_VIM/coc/linux/coc-settings.json    (linux)
 
 ## g:coc_data_home
 ~~~
+~/.vim/coc_data        (local)
 $MY_VIM/coc_data/win   (windows)
 $MY_VIM/coc_data/linux (linux)
-~/.config/coc          (local linux)
+~/.config/coc          (linux local)
 ~~~
 
 <meta name="keywords" content="*memo_setup.commands*">
