--- a/setup.md.html
+++ b/setup.md.html
@@ -65,6 +65,7 @@ cd env
 1. [Git](https://git-scm.com/)
 1. [Cmake](https://cmake.org/)
 1. [Vim](https://www.vim.org/)
+1. [Node.js](https://nodejs.org/ja/)
 1. [Blender](https://www.blender.org/)
 
 ~~~
