--- a/vim.md.html
+++ b/vim.md.html
@@ -214,12 +214,12 @@ cfile  | file under the cursor
 | C-R     | redo                      |                         | ==
 | C-S     | terminal control          |                         | [to be assigned]
 | C-T     | prev in tag list          |                         | ==
-| C-U     | half page scroll up       | WblNext                 | WblNext
+| C-U     | half page scroll up       | WblPrint                | WblPrint
 | C-V     | block visual mode         |                         | ==
 | C-W     | window command            |                         | ==
 | C-X     | subtract                  |                         | [to be assigned]
-| C-Y     | one line scroll up        | WblPrev                 | WblPrev
-| C-Z     | suspend                   |                         | menu ref
+| C-Y     | one line scroll up        | :CpmOpen fzy            | menu fzy
+| C-Z     | suspend                   | :CpmOpen ref            | menu ref
 | NL      | j                         |                         | ==
 | Space   | l                         | :CpmOpen                | menu
 | Tab     | next in jump list         |                         | ==
