--- a/os_linux.md.html
+++ b/os_linux.md.html
@@ -7,6 +7,9 @@
 <meta name="keywords" content="*memo_os.wsl*">
 WSL
 =======================================================
+
+- [Windows Subsystem for Linux に関するドキュメント](https://learn.microsoft.com/ja-jp/windows/wsl/)
+
 ## wsl command
 
 |       | Command                      | Description            |
@@ -75,6 +78,13 @@ SHARE_FOLDER /mnt/vbox/SHARE_FOLDER vboxsf defaults,noauto,iocharset=utf8,uid=10
 <meta name="keywords" content="*memo_os.linux*">
 Linux
 =======================================================
+
+<meta name="keywords" content="*memo_os.linux.ip*">
+## ip
+| Command | Description        |
+| ---     | ---                |
+| ip a    | show addresses     |
+| ip r    | show routing table |
 
 <meta name="keywords" content="*memo_os.linux.apt*">
 ## apt
