--- a/setup.md.html
+++ b/setup.md.html
@@ -49,6 +49,7 @@ cd env
 1. Visual Studio Code
 1. Visual Studio Community 2022
 1. Python 3.10
+1. PowerToys
 
 ## Install Windows Apps
 1. Chrome
@@ -159,7 +160,7 @@ Setup Windows
 ### Development
 - Gvim
 - Visual Studio Code
-- Visual Studio 2017
+- Visual Studio Community 2022
 - Android Studio
 - CMake
 - Git
