--- a/links.md.html
+++ b/links.md.html
@@ -101,6 +101,7 @@ Develop
 
 ## フォント
 - [プログラミング用日本語フォント](https://github.com/tsunesan3/awsome-jp-coding-fonts)
+  - [HackGen](https://github.com/yuru7/HackGen)
   - [Cica](https://github.com/miiton/Cica) |
     [NerdFont一覧](https://miiton.github.io/Cica/)
   - [Myrica](https://myrica.estable.jp/)
