--- a/os_linux.md.html
+++ b/os_linux.md.html
@@ -81,17 +81,20 @@ Linux
 
 <meta name="keywords" content="*memo_os.linux.apt*">
 ## apt
-| Command               | Description            |
-| ---                   | ---                    |
-| apt update            | update database        |
-| apt list --upgradable |                        |
-| apt upgrade           | update packages        |
-| apt autoremove        | remove unused packages |
-| apt list pkg          |                        |
-| apt show pkg          |                        |
-| apt install pkg       |                        |
-| apt remove pkg        |                        |
-| apt search pkg        |                        |
+| Command               | Description                     |
+| ---                   | ---                             |
+| apt update            | update database                 |
+| apt list --upgradable |                                 |
+| apt upgrade           | update packages                 |
+| apt autoremove        | remove unused packages          |
+| ---                   | ---                             |
+| apt list pkg          |                                 |
+| apt show pkg          |                                 |
+| apt search pkg        |                                 |
+| ---                   | ---                             |
+| apt install pkg       |                                 |
+| apt remove pkg        | remove package                  |
+| apt purge pkg         | remove package and its settings |
 
 <meta name="keywords" content="*memo_os.linux.flatpak*">
 ## flatpak
