--- a/setup.md.html
+++ b/setup.md.html
@@ -212,14 +212,16 @@ Proxy
 =======================================================
 ## ~/.bashrc
 ~~~
-export HTTP_PROXY="http://USER:PASS@PROXY_SERVER:PORT"
-export HTTPS_PROXY="http://USER:PASS@PROXY_SERVER:PORT"
+export HTTP_PROXY="http://$PROXY_USER:$PROXY_PASS@$PROXY_HOST:$PROXY_PORT"
+export HTTPS_PROXY="$HTTP_PROXY"
 export http_proxy="$HTTP_PROXY"
-export https_proxy="$HTTPS_PROXY"
+export https_proxy="$HTTP_PROXY"
+export FTP_PROXY="$HTTP_PROXY"
+export NO_PROXY=".example.com,localhost,127.0.0.1"
+export no_proxy="$NO_PROXY"
 
 export GIT_SSL_NO_VERIFY=1
 export CURL_SSL_NO_VERIFY=1
-export NO_PROXY="localhost,127.0.0.1"
 ~~~
 
 <meta name="keywords" content="*memo_setup.pip*">
