remove yahoo stock charts

--- a/memo.md.html
+++ b/memo.md.html
@@ -9,12 +9,8 @@
 
 ![Image](images/top.jpg)
 
-<div id="col2">
-
+<div id="col2"></div>
 <div id="clock"></div>
-![日経平均 (3ヵ月)]("http://chart.yahoo.co.jp/?code=998407.O&tm=3m&type=c&log=off&size=m&over=m65,m130&add=r,ss,fs&comp=")
-
-</div>
 
 <style class="fallback">body{visibility:hidden}</style>
 <script src="inc/markdeep.min.js"></script>
