--- a/sh.md.html
+++ b/sh.md.html
@@ -33,6 +33,27 @@ Command                              | Description
 find . -name '*word*'                | find files including a word
 find . -name '*word*' -exec rm {} \; | remove matched files
 
+<meta name="keywords" content="*memo_sh.fzf*">
+## fzf
+Command     | Description
+---         | ---
+cmd **<TAB> | file completion
+Ctrl-r      | history
+Ctrl-t      | print file and dir name
+Alt-c       | cd
+
+<meta name="keywords" content="*memo_sh.cli*">
+## New CLI
+| old  | new          |
+| ---  | ---          |
+| cat  | bat (batcat) |
+| find | fd (fdfind)  |
+| grep | rg           |
+| top  | htop, btop   |
+| du   | ncdu         |
+| ls   |              |
+| ps   |              |
+
 ## 環境変数
 ~~~
 HISTCONTROL=ignoreboth
