--- a/sh.md.html
+++ b/sh.md.html
@@ -44,15 +44,16 @@ Alt-c       | cd
 
 <meta name="keywords" content="*memo_sh.cli*">
 ## New CLI
-| old  | new          |
-| ---  | ---          |
-| cat  | bat (batcat) |
-| find | fd (fdfind)  |
-| grep | rg           |
-| top  | htop, btop   |
-| du   | ncdu         |
-| ls   |              |
-| ps   |              |
+| Traditional | New          |
+| ---         | ---          |
+| ls          | exa          |
+| cat         | bat (batcat) |
+| find        | fd (fdfind)  |
+| grep        | rg (ripgrep) |
+| -           | fzf          |
+| du          | ncdu         |
+| top         | htop, btop   |
+| ps          |              |
 
 ## 環境変数
 ~~~
